CSS overflow fix

--- a/playground/src/index.css
+++ b/playground/src/index.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     min-height: 100%;
     flex-grow: 1;
+    overflow: hidden;
 }
 
 *,
